Added dialog options to setup the memory configuration